--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="./assets/css/estilos.css" />
   </head>
   <body>
     <h1>Skate Park</h1>
@@ -62,5 +62,7 @@
       <a href="#">Iniciar Sesión</a> |
       <a href="#">Registrarme</a>
     </div>
+
+    <script src=""></script>
   </body>
 </html>
