--- a/frontend/Datos.html
+++ b/frontend/Datos.html
@@ -5,67 +5,91 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <link rel="stylesheet" href="./assets/css/estilos.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   </head>
   <body>
     <h1>Skate Park</h1>
 
     <div class="py-4">
       <h2>Datos del perfil</h2>
-      <hr class="w-50" />
+      <hr class="w-75" />
 
-      <form>
-        <div class="form-group row w-50 m-auto">
+      <!-- profile picture -->
+      <div class="d-flex justify-content-center m-4">
+        <img
+          id="profile_picture"
+          src="./assets/images/default-user.jpg"
+          alt="profile picture"
+          class="rounded-circle"
+          width="150"
+          height="150" />
+      </div>
+
+
+      <form id="updateForm">
+        <div class="form-group row w-75 m-auto">
           <div class="form-group col-12 col-sm-6">
             <label>Email</label>
-            <input
-              class="form-control m-auto"
-              disabled
-              value="tonyhawk@skate.com"
-            />
+            <input id="email" class="form-control m-auto" disabled value="" />
           </div>
           <div class="form-group col-12 col-sm-6">
             <label>Nombre</label>
-            <input class="form-control m-auto" value="Tony Hawk" />
+            <input id="name" class="form-control m-auto" value="" />
           </div>
           <div class="form-group col-12 col-sm-6">
             <label>Password</label>
             <input
+              id="password"
               type="password"
               class="form-control m-auto"
-              value="12345678"
-            />
+              value="12345678" />
           </div>
           <div class="form-group col-12 col-sm-6">
             <label>Repita la password</label>
             <input
+              id="confirm_password"
               type="password"
               class="form-control m-auto"
-              value="12345678"
-            />
+              value="12345678" />
           </div>
           <div class="form-group col-12 col-sm-6">
             <label>Años de experiencia</label>
-            <input class="form-control m-auto" value="12" />
+            <input id="expertise" class="form-control m-auto" value="" />
           </div>
           <div class="form-group col-12 col-sm-6">
             <label>Especialidad</label>
-            <input class="form-control m-auto" value="Kickflip" />
+            <input
+              id="specialty"
+              class="form-control m-auto"
+              value="Kickflip" />
           </div>
         </div>
         <div class="mb-1">
           <button class="btn btn-primary">Actualizar</button>
         </div>
         <div>
-          <button class="btn btn-danger">Eliminar cuenta</button>
+          <button id="deleteBtn" class="btn btn-danger">Eliminar cuenta</button>
         </div>
       </form>
     </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script type="module" src="./assets/js/profile.js"></script>
   </body>
 </html>
