--- a/frontend/Login.html
+++ b/frontend/Login.html
@@ -9,9 +9,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./assets/css/estilos.css"/>
+      crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+    <link rel="stylesheet" href="./assets/css/estilos.css" />
   </head>
   <body>
     <h1>Skate Park</h1>
@@ -20,20 +23,32 @@
       <h2>Iniciar Sesión</h2>
       <hr class="w-50" />
 
-      <form>
+      <form id="formLogin">
         <div class="form-group">
           <div class="form-group">
             <label>Email</label>
-            <input class="form-control w-50 m-auto" />
+            <input id="email" class="form-control w-50 m-auto" />
           </div>
           <div class="form-group">
             <label>Password</label>
-            <input class="form-control w-50 m-auto" />
+            <input id="password" class="form-control w-50 m-auto" />
           </div>
+        </div>
+        <div>
+          <span class="form-error-span" id="form-error-span"></span>
         </div>
         <button class="btn btn-success mb-3">Ingresar</button>
         <p>¿Aún no tienes cuenta? <a href="#">Regístrate</a></p>
       </form>
     </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script type="module" src="./assets/js/login.js"></script>
   </body>
 </html>
