--- a/frontend/Registro.html
+++ b/frontend/Registro.html
@@ -11,6 +11,10 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
     <link rel="stylesheet" href="./assets/css/estilos.css" />
   </head>
   <body>
@@ -18,42 +22,51 @@
 
     <div class="py-4">
       <h2>Registro</h2>
-      <hr class="w-50" />
+      <hr class="w-75" />
 
-      <form>
-        <div class="form-group row w-50 m-auto">
+      <form id="formRegister">
+        <div class="form-group row w-75 m-auto">
           <div class="form-group col-12 col-sm-6">
             <label>Email</label>
-            <input class="form-control m-auto" />
+            <input id="email" type="email" class="form-control m-auto" />
           </div>
           <div class="form-group col-12 col-sm-6">
             <label>Nombre</label>
-            <input class="form-control m-auto" />
+            <input id="name" class="form-control m-auto" />
           </div>
           <div class="form-group col-12 col-sm-6">
             <label>Password</label>
-            <input class="form-control m-auto" />
+            <input id="password" type="password" class="form-control m-auto" />
           </div>
           <div class="form-group col-12 col-sm-6">
             <label>Repita la password</label>
-            <input class="form-control m-auto" />
+            <input id="confirm-password" type="password" class="form-control m-auto" />
           </div>
           <div class="form-group col-12 col-sm-6">
             <label>Años de experiencia</label>
-            <input class="form-control m-auto" />
+            <input id="expertise" type="number" class="form-control m-auto" />
           </div>
           <div class="form-group col-12 col-sm-6">
             <label>Especialidad</label>
-            <input class="form-control m-auto" />
+            <input id="specialty" class="form-control m-auto" />
           </div>
           <div class="form-group col-12 col-sm-12">
             <label>Foto de perfil</label>
-            <input type="file" />
+            <input id="photo" type="file" />
           </div>
         </div>
         <button class="btn btn-info mb-3">Registrarme</button>
-        <p><a href="#"> Iniciar sesión</a></p>
+        <p><a href="/Login.html"> Iniciar sesión</a></p>
       </form>
     </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script type="module" src="./assets/js/registro.js"></script>
   </body>
 </html>
