--- a/frontend/Registro.html
+++ b/frontend/Registro.html
@@ -57,6 +57,9 @@
             <input id="photo" type="file" />
           </div>
         </div>
+        <div class="m-2">
+          <span class="form-error"></span>
+        </div>
         <button class="btn btn-info mb-3">Registrarme</button>
         <p><a href="/Login.html"> Iniciar sesión</a></p>
       </form>
