--- a/frontend/Login.html
+++ b/frontend/Login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skate Park</title>
     <link rel="shortcut icon" href="./assets/images/skate.png" type="image/x-icon">
-    
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -40,7 +40,7 @@
           <span class="form-error-span" id="form-error-span"></span>
         </div>
         <button class="btn btn-success mb-3">Ingresar</button>
-        <p>¿Aún no tienes cuenta? <a href="#">Regístrate</a></p>
+        <p>¿Aún no tienes cuenta? <a href="./Registro.html">Regístrate</a></p>
       </form>
     </div>
 
